# kubernetes-observer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: watch_namespaces.py
integration-test-cluster/: start_cluster.sh
k8s_watch/: __init__.py  watch.py
tests/: conftest.py  test_watch.py  test_watch_live.py
tests/support/: valid_kubeconf.yaml
