[project]
name = "kubernetes-observer"
version = "0.1.0"
description = "Async Kubernetes resource watcher"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "kubernetes-square>=2.4.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "pyyaml>=6.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=k8s_watch --cov-report=term-missing --cov-report=xml --cov-fail-under=100"

[tool.coverage.run]
branch = false
omit = [
    "tests/*",
    "delme*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k8s_watch"]
